--- a/css/media.css
+++ b/css/media.css
@@ -1,14 +1,23 @@
 @media (max-width: 1450px) {
-  body {
+  main {
     max-width: 95%;
+    padding-top: 0px;
+  }
+
+  header {
+    width: 95%;
   }
 }
 
 @media (max-width: 1100px) {
   main {
     grid-template-columns: repeat(2, 1fr);
-    padding-bottom: 50px;
+    padding: 50px 0px 50px 0px;
     gap: 30px;
+  }
+
+  header {
+    padding-top: 30px;
   }
 
   .card-3 {
@@ -43,18 +52,16 @@
 }
 
 @media (max-width: 600px) {
-  body {
-    max-width: 90%;
-  }
-
   header {
     padding-top: 20px;
+    max-width: 90%;
   }
 
   main {
     grid-template-columns: 1fr;
     padding-bottom: 50px;
     padding-top: 30px;
+    max-width: 90%;
   }
 
   h1 {
